tests/ui/feature-gates/feature-gate-abi_unadjusted.stderr
error[E0658]: the extern "unadjusted" ABI is an implementation detail and perma-unstable
  --> $DIR/feature-gate-abi_unadjusted.rs:1:8
   |
LL | extern "unadjusted" fn foo() {
   |        ^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_unadjusted)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
