tests/ui/feature-gates/feature-gate-abi_unadjusted.rs
extern "unadjusted" fn foo() {
//~^ ERROR: "unadjusted" ABI is an implementation detail and perma-unstable
}

fn main() {
    foo();
}
